--- a/event_listener/templates/stanza.html
+++ b/event_listener/templates/stanza.html
@@ -6,3 +6,4 @@ Click!
   <option value='value1'>Value1</option>
   <option value='value2'>Value2</option>
 </select>
+<div>Current value: <span id='current_value'></span></div>
