--- a/apply-css/templates/stanza.html
+++ b/apply-css/templates/stanza.html
@@ -1,20 +1,7 @@
 <style>
-  @import url('./assets/sample.css');
+  @import url('http://www.coolwebwindow.com/temp/source/simple/sim001_blue/src/css/common.css');
 </style>
 
 <table>
-  <tbody>
-    <tr>
-      <th>column</th>
-    </tr>
-    <tr>
-      <td>row 1</td>
-    </tr>
-    <tr>
-      <td>row 2</td>
-    </tr>
-    <tr>
-      <td>row 3</td>
-    </tr>
-  </tbody>
+  <a href="http://www.coolwebwindow.com/temp/source/simple/sim001_blue/src/css/common.css">Download applied css file</a>
 </table>
